--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,14 @@
   </head>
   <body>
     <div id="root"></div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script>
       $(document).ready(function() {
         $(".sidenav").sidenav();
         $(".materialboxed").materialbox();
+        $(".parallax").parallax();
       });
     </script>
   </body>
