added form and tabs

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
         $(".sidenav").sidenav();
         $(".materialboxed").materialbox();
         $(".parallax").parallax();
+        $(".tabs").tabs();
       });
     </script>
   </body>
