--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
         $(".materialboxed").materialbox();
         $(".parallax").parallax();
         $(".tabs").tabs();
+        $(".datepicker").datepicker({
+          disableWeekends: true
+        });
       });
     </script>
   </body>
