finished template to website - need to add content

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,8 @@
         $(".materialboxed").materialbox();
         $(".parallax").parallax();
         $(".tabs").tabs();
+        $(".scrollspy").scrollSpy();
+        $(".tooltipped").tooltip();
         $(".datepicker").datepicker({
           disableWeekends: true
         });
