--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,9 @@
         $(".tabs").tabs();
         $(".scrollspy").scrollSpy();
         $(".tooltipped").tooltip();
+        $(document).ready(function() {
+          $(".carousel").carousel();
+        });
         $(".datepicker").datepicker({
           disableWeekends: true
         });
