--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css"
     />
+    <!-- Fonts-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
     <title>Jamie Davis - Portfolio</title>
   </head>
   <body>
