--- a/index.html
+++ b/index.html
@@ -4,19 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <title>Jamie Davis Portfolio Website</title>
 </head>
 <body>
+
+    <!-- Nav Bar with buger menu!-->
+
+    <header>
+
+        <ul>
+            <li>Add buger menu here!</li>
+            <li>About</li>
+            <li>Projects</li>
+            <li>Contact</li>
+        </ul>
+
+    </header>
+
+<!-- Main body, title, picture and skills-->
+
     <section class="start">
 
     <h1>Jamie Davis</h1>
     
-    <img src="assets/picture.jpg" id="photo" alt="pic of me goes here">
+    <img src="assets/me.jpg" id="photo" alt="pic of me goes here">
 
-    <h2>Software Developer</h2>
+    <h2>#Developer</h2>
+
+    <p>HTML | CSS | Javascript | React | Node</p>
 
 </section>
+<p>created by jamie davis</p>
     
 </body>
 </html>
