made additional changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,35 +9,84 @@
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <title>Jamie Davis Portfolio Website</title>
 </head>
+
 <body>
 
-    <!-- Nav Bar with buger menu!-->
+    <!-- Nav Bar with buger menu! with fade overlay-->
+    <!-- MORE NOTES - USER ANIMATE ON SCROLL-->
+    <!-- Make page dynamic, add time, say good morning afternoon or goodnight, maybe change background or an image -->
+    <!-- Build the pure css hamburger menu -->
+    <!-- Fade in image with Greensock-->
 
-    <header>
+    <!-- <header>
 
+        <h3>Jamie Davis Portfolio</h3>
+
+    </header> -->
+
+    <nav>
         <ul>
-            <li>Add buger menu here!</li>
-            <li>About</li>
-            <li>Projects</li>
-            <li>Contact</li>
+            <li class="burger-menu">Add buger menu here!</li>
+            <li><a>About</a></li>
+            <li><a>Projects</a></li>
+            <li><a>Contact</a></li>
         </ul>
+    </nav>
 
-    </header>
+    <!-- Main body, title, picture and skills-->
 
-<!-- Main body, title, picture and skills-->
+    <div class="main">
 
-    <section class="start">
+        <section class="intro">
 
-    <h1>Jamie Davis</h1>
-    
-    <img src="assets/me.jpg" id="photo" alt="pic of me goes here">
+            <h1 class="name">Jamie Davis</h1>
 
-    <h2>#Developer</h2>
+            <img src="assets/me.jpg" class="photo" alt="pic of me goes here">
 
-    <p>HTML | CSS | Javascript | React | Node</p>
+            <h2>#Developer</h2>
 
-</section>
-<p>created by jamie davis</p>
-    
+            <p>HTML | CSS | Javascript | React | Node</p>
+
+        </section>
+
+        <section class="about">
+            <h2>About Me</h2>
+
+            <p>insert quick decription of me and what i do.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, adipisci sit sequi doloribus culpa numquam
+                dolore. Voluptates harum dolores ipsa. Illo debitis ab adipisci unde officiis voluptas itaque, in
+                aperiam blanditiis tempore vero cupiditate ex nobis amet, sapiente labore. Laboriosam aliquid sed alias
+                voluptatem recusandae soluta nesciunt ullam veniam, beatae id expedita fugit numquam incidunt animi,
+                consequuntur tempora. Recusandae, ducimus.</p>
+        </section>
+        <section class="projects">
+            <h2>Projects</h2>
+
+            <p>Projects go here.</p>
+
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In vero saepe distinctio ipsa voluptatum nisi
+                inventore omnis dolores facere et. Maiores in, obcaecati totam temporibus perferendis tempora fuga hic,
+                inventore consequatur nulla repellat enim iure labore id dolorum iusto impedit veritatis quia
+                praesentium perspiciatis. Iure omnis quos tempora, minima, neque consequatur explicabo deleniti dolore
+                nesciunt eligendi, laborum ipsa? Eum, sapiente!</p>
+        </section>
+        <section class="contact">
+            <h2>Contact Me</h2>
+
+            <p>Contact Me section goes here, along with icons for each social media icon</p>
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati assumenda omnis consequuntur, eos
+                officiis minus placeat nulla labore unde voluptate ipsam, voluptatem corporis iste ullam quis nam
+                suscipit eveniet cumque!</p>
+        </section>
+
+        <footer>
+            <p class="copyright">Made by jamie davis</p>
+        </footer>
+    </div>
+
+
 </body>
+
 </html>
