--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Jamie Davis Portfolio Website</title>
 </head>
 
@@ -49,7 +50,7 @@
 
         </section>
 
-        <section class="about">
+        <section class="about" data-aos="fade-right">
             <h2>About Me</h2>
 
             <p>insert quick decription of me and what i do.</p>
@@ -60,7 +61,7 @@
                 voluptatem recusandae soluta nesciunt ullam veniam, beatae id expedita fugit numquam incidunt animi,
                 consequuntur tempora. Recusandae, ducimus.</p>
         </section>
-        <section class="projects">
+        <section class="projects" data-aos="fade-left">
             <h2>Projects</h2>
 
             <p>Projects go here.</p>
@@ -71,7 +72,7 @@
                 praesentium perspiciatis. Iure omnis quos tempora, minima, neque consequatur explicabo deleniti dolore
                 nesciunt eligendi, laborum ipsa? Eum, sapiente!</p>
         </section>
-        <section class="contact">
+        <section class="contact" data-aos="fade-right">
             <h2>Contact Me</h2>
 
             <p>Contact Me section goes here, along with icons for each social media icon</p>
@@ -86,7 +87,10 @@
         </footer>
     </div>
 
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({delay: 250});
+    </script>
 </body>
 
 </html>
